Proptype check was failing in NavigationItem component, don't  know if my fix was as it should have been or if video was wrong Made Logo more responsive  Logo.modules.css takes 100% of height  SideDrawer and Toolbar wrap logo in a div and set the div height  inside their own CSS, the best way?

--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -2,6 +2,7 @@
   position: fixed;
   width: 280px;
   max-width: 70%;
+  height: 100%;
   left: 0;
   top: 0;
   z-index: 200;
@@ -23,4 +24,8 @@
 
 .CloseCSS {
   transform: translateX(-100%);
+}
+
+.LogoCSS {
+  height: 11%;
 }
