--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -16,3 +16,7 @@
 .ToolbarCSS nav {
   height: 100%;
 }
+
+.LogoCSS {
+  height: 80%;
+}
